[package]
name = "bilicomic-dataflow"
version = "0.0.4"
edition = "2021"
description = "Dataflow library for manga"
license = "MIT"
repository = "https://github.com/catlair/BiliOutils"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
